comments vics ready

--- a/documentation/components/DrinklyTeamComponent.html
+++ b/documentation/components/DrinklyTeamComponent.html
@@ -206,7 +206,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:21</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:43</a></div>
                             </td>
                         </tr>
 
@@ -323,18 +323,25 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="52"
-                            class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:52</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="91"
+                            class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:91</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Trae los bares de la DB.</p>
+</div>
 
+                    <div>
+                    </div>
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
 
+                    </div>
+                    <div class="io-description">
+                        
                     </div>
                 </td>
             </tr>
@@ -362,18 +369,25 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="66"
-                            class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:66</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="109"
+                            class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:109</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Trae los tragos de la DB.</p>
+</div>
 
+                    <div>
+                    </div>
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
 
+                    </div>
+                    <div class="io-description">
+                        
                     </div>
                 </td>
             </tr>
@@ -394,21 +408,23 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>getMessage($event)</code>
+<code>getMessage($event: <a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank">any</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="38"
-                            class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:38</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="65"
+                            class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:65</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Muestra/Oculta el sidebar</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -416,18 +432,29 @@
                             <thead>
                                 <tr>
                                     <td>Name</td>
+                                    <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>$event</td>
+                                    <td>
+                                                <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                                    </td>
 
                                     <td>
                                         No
                                     </td>
 
 
+                                    <td>
+                                        <ul>
+<li>Evento que ocurre al hacer click para mostrar/ocultar el menú</li>
+</ul>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -467,18 +494,25 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="80"
-                            class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:80</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="127"
+                            class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:127</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Trae los usuarios de la DB.</p>
+</div>
 
+                    <div>
+                    </div>
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
 
+                    </div>
+                    <div class="io-description">
+                        
                     </div>
                 </td>
             </tr>
@@ -506,18 +540,25 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="48"
-                            class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:48</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="83"
+                            class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:83</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Se regresa a la ruta previa.</p>
+</div>
 
+                    <div>
+                    </div>
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
 
+                    </div>
+                    <div class="io-description">
+                        
                     </div>
                 </td>
             </tr>
@@ -545,8 +586,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="32"
-                            class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:32</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="54"
+                            class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:54</a></div>
                 </td>
             </tr>
 
@@ -584,18 +625,25 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="44"
-                            class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:44</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="75"
+                            class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:75</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Navega a la publicación del negocio.</p>
+</div>
 
+                    <div>
+                    </div>
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
 
+                    </div>
+                    <div class="io-description">
+                        
                     </div>
                 </td>
             </tr>
@@ -627,10 +675,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:18</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:31</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Guarda la cantidad de bares disponibles en la página.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -659,10 +713,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:19</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="35" class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:35</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Loader de los bares.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -691,10 +751,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:20</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="39" class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:39</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Loader de los tragos.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -723,10 +789,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:21</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:43</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Loader de los users.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -750,10 +822,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:17</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="27" class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:27</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Guarda la cantidad de tragos disponibles en la página.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -777,10 +855,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:15</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:19</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Maneja el responsive del sidebar.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -804,10 +888,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:16</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/app/components/drinkly-team/drinkly-team.component.ts:23</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Guarda la cantidad de usuarios disponibles en la página.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -831,12 +921,34 @@ import { DrinkService } from &#x27;src/app/services/drink.service&#x27;;
 })
 export class DrinklyTeamComponent implements OnInit {
 
+  /**
+   * Maneja el responsive del sidebar.
+   * @type {Boolean}
+   */
   sidebar: Boolean;
+  /**
+   * Guarda la cantidad de usuarios disponibles en la página.
+   */
   users:number;
+  /**
+   * Guarda la cantidad de tragos disponibles en la página.
+   */
   recipes:number;
+  /**
+   * Guarda la cantidad de bares disponibles en la página.
+   */
   bars:number;
+  /**
+   * Loader de los bares.
+   */
   loadingBars:Boolean&#x3D;true;
+  /**
+   * Loader de los tragos.
+   */
   loadingDrinks:Boolean&#x3D;true;
+  /**
+   * Loader de los users.
+   */
   loadingUsers:Boolean&#x3D;true;
 
 
@@ -854,21 +966,38 @@ export class DrinklyTeamComponent implements OnInit {
     this.getUsers();
   }
 
-  getMessage($event){
+  /**
+   * Muestra/Oculta el sidebar
+   * @param {any} $event - Evento que ocurre al hacer click para mostrar/ocultar el menú
+   * @returns {void}
+   */
+  getMessage($event:any):void{
     if(screen.width&gt;640){
       this.sidebar &#x3D; $event;
     }
   }
 
-  postBusiness(){
+  /**
+   * Navega a la publicación del negocio.
+   * @returns {void}
+   */
+  postBusiness():void{
     this.route.navigate([&quot;post-your-business&quot;]);
   }
 
-  goBack(){
+  /**
+   * Se regresa a la ruta previa.
+   * @returns {void}
+   */
+  goBack():void{
     this._location.back()
   }
 
-  getBars(){
+  /**
+   * Trae los bares de la DB.
+   * @returns {void}
+   */
+  getBars():void{
     this._barService.getBars().subscribe((res:any) &#x3D;&gt; {
       let barAv &#x3D; [];
       let bars &#x3D; [...res.data];
@@ -882,7 +1011,11 @@ export class DrinklyTeamComponent implements OnInit {
     } )
   }
 
-  getDrinks(){
+  /**
+   * Trae los tragos de la DB.
+   * @returns {void}
+   */
+  getDrinks():void{
     this._drinkService.getDrinks().subscribe((res:any) &#x3D;&gt; {
       let available &#x3D; [];
       let drinks &#x3D; [...res.data];
@@ -896,7 +1029,11 @@ export class DrinklyTeamComponent implements OnInit {
     } )
   }
 
-  getUsers(){
+  /**
+   * Trae los usuarios de la DB.
+   * @returns {void}
+   */
+  getUsers():void{
     this._userService.getUsers().subscribe((res:any) &#x3D;&gt; {
       let available &#x3D; [];
       let user &#x3D; [...res.data];
