--- a/documentation/components/ListBarComponent.html
+++ b/documentation/components/ListBarComponent.html
@@ -320,7 +320,7 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>edit(id: <a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank">any</a>)</code>
+<code>edit(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" target="_blank">String</a>)</code>
                 </td>
             </tr>
 
@@ -353,7 +353,7 @@
                                 <tr>
                                     <td>id</td>
                                     <td>
-                                                <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" target="_blank" >String</a></code>
                                     </td>
 
                                     <td>
@@ -989,10 +989,10 @@ export class ListBarComponent implements OnInit {
 
   /**
    * Navega a la ruta donde se puede editar un bar específico.
-   * @param {any} id - id del bar que se editará.
+   * @param {String} id - id del bar que se editará.
    * @returns {void}
    */
-  edit(id:any): void{
+  edit(id:String): void{
     this.route.navigate([&#x27;admin/bar/edit/&#x27;, id]);
   }
 
