--- a/documentation/components/PostDrinkComponent.html
+++ b/documentation/components/PostDrinkComponent.html
@@ -220,7 +220,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:20</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="39" class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:39</a></div>
                             </td>
                         </tr>
 
@@ -349,18 +349,25 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="64"
-                            class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:64</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="96"
+                            class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:96</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Le permite al usuario añadir otro ingrediente.</p>
+</div>
 
+                    <div>
+                    </div>
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
 
+                    </div>
+                    <div class="io-description">
+                        
                     </div>
                 </td>
             </tr>
@@ -388,18 +395,25 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="54"
-                            class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:54</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="82"
+                            class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:82</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Crea el form group para añadir otro ingrediente.</p>
+</div>
 
+                    <div>
+                    </div>
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
 
+                    </div>
+                    <div class="io-description">
+                        
                     </div>
                 </td>
             </tr>
@@ -420,21 +434,23 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>deleteIngredient(index)</code>
+<code>deleteIngredient(index: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank">number</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="68"
-                            class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:68</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="105"
+                            class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:105</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Le permite al usuario eliminar un ingrediente.</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -442,18 +458,29 @@
                             <thead>
                                 <tr>
                                     <td>Name</td>
+                                    <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>index</td>
+                                    <td>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
+                                    </td>
 
                                     <td>
                                         No
                                     </td>
 
 
+                                    <td>
+                                        <ul>
+<li>index del ingrediente.</li>
+</ul>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -486,21 +513,23 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>getMessage($event)</code>
+<code>getMessage($event: <a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank">any</a>)</code>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="48"
-                            class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:48</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="72"
+                            class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:72</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Muestra/Oculta el sidebar</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -508,18 +537,29 @@
                             <thead>
                                 <tr>
                                     <td>Name</td>
+                                    <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>$event</td>
+                                    <td>
+                                                <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                                    </td>
 
                                     <td>
                                         No
                                     </td>
 
 
+                                    <td>
+                                        <ul>
+<li>Evento que ocurre al hacer click para mostrar/ocultar el menú</li>
+</ul>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -559,18 +599,25 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="106"
-                            class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:106</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="154"
+                            class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:154</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Regresa a la ruta anterior.</p>
+</div>
 
+                    <div>
+                    </div>
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
 
+                    </div>
+                    <div class="io-description">
+                        
                     </div>
                 </td>
             </tr>
@@ -598,18 +645,25 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="102"
-                            class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:102</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="146"
+                            class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:146</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Navega al home</p>
+</div>
 
+                    <div>
+                    </div>
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
 
+                    </div>
+                    <div class="io-description">
+                        
                     </div>
                 </td>
             </tr>
@@ -637,8 +691,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="41"
-                            class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:41</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="60"
+                            class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:60</a></div>
                 </td>
             </tr>
 
@@ -676,18 +730,25 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="73"
-                            class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:73</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="113"
+                            class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:113</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Verifica el form y hace la publicación.</p>
+</div>
 
+                    <div>
+                    </div>
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
 
+                    </div>
+                    <div class="io-description">
+                        
                     </div>
                 </td>
             </tr>
@@ -719,10 +780,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:16</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:23</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Formulario para postear la receta.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -751,10 +818,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:18</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:31</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Indica si ya se trajo o no la info de la DB.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -783,10 +856,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:19</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="35" class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:35</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Indica si se está o no enviando la publicación.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -815,10 +894,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:20</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="39" class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:39</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Indica si ya se envió la publicación.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -842,10 +927,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:15</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:19</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Maneja el responsive del sidebar.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -869,10 +960,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:17</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="27" class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:27</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Usuario registrado.</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -898,7 +995,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:60</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="88" class="link-to-prism">src/app/components/post-drink/post-drink.component.ts:88</a></div>
                                 </td>
                             </tr>
 
@@ -923,11 +1020,30 @@ import {Location} from &#x27;@angular/common&#x27;;
 })
 export class PostDrinkComponent implements OnInit {
 
+  /**
+   * Maneja el responsive del sidebar.
+   * @type {Boolean}
+   */
   sidebar: Boolean;
+  /**
+   * Formulario para postear la receta.
+   */
   form: FormGroup;
+  /**
+   * Usuario registrado.
+   */
   user: any;
+  /**
+   * Indica si ya se trajo o no la info de la DB.
+   */
   loading:Boolean&#x3D;true;
+  /**
+   * Indica si se está o no enviando la publicación.
+   */
   sending:Boolean&#x3D;false;
+  /**
+   * Indica si ya se envió la publicación.
+   */
   sent:Boolean&#x3D;false;
 
   constructor(
@@ -956,13 +1072,22 @@ export class PostDrinkComponent implements OnInit {
     })
   }
 
-  getMessage($event){
+  /**
+   * Muestra/Oculta el sidebar
+   * @param {any} $event - Evento que ocurre al hacer click para mostrar/ocultar el menú
+   * @returns {void}
+   */
+  getMessage($event:any):void{
     if(screen.width&gt;640){
       this.sidebar &#x3D; $event;
     }
   }
 
-  addIngredientGroup() {
+  /**
+   * Crea el form group para añadir otro ingrediente.
+   * @returns {any}
+   */
+  addIngredientGroup():any {
     return this._builder.group({
       ingredient: [&quot;&quot;, Validators.required],
     });
@@ -972,16 +1097,28 @@ export class PostDrinkComponent implements OnInit {
     return &lt;FormArray&gt;this.form.get(&quot;ingredients&quot;);
   }
 
-  addIngredient() {
+  /**
+   * Le permite al usuario añadir otro ingrediente.
+   * @returns {void}
+   */
+  addIngredient():void {
     this.IngredientArray.push(this.addIngredientGroup());
   }
 
-  deleteIngredient(index) {
+  /**
+   * Le permite al usuario eliminar un ingrediente.
+   * @param {number} index - index del ingrediente.
+   * @returns {void}
+   */
+  deleteIngredient(index:number):void {
     this.IngredientArray.removeAt(index);
   }
 
-
-  postRecipe(){
+  /**
+   * Verifica el form y hace la publicación.
+   * @returns {void}
+   */
+  postRecipe():void{
     this.sending&#x3D;true;
     console.log(this.form.value.recipe)
     let ingredients: String [] &#x3D; [];
@@ -1010,11 +1147,19 @@ export class PostDrinkComponent implements OnInit {
     })
   }
 
-  goHome(){
+  /**
+   * Navega al home
+   * @returns {void}
+   */
+  goHome():void{
     this.route.navigate([&quot;&quot;]);
   }
 
-  goBack(){
+  /**
+   * Regresa a la ruta anterior.
+   * @returns {void}
+   */
+  goBack():void{
     this._location.back()
   }
 
