--- a/documentation/components/UploadingLoaderComponent.html
+++ b/documentation/components/UploadingLoaderComponent.html
@@ -170,7 +170,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="9" class="link-to-prism">src/app/components/uploading-loader/uploading-loader.component.ts:9</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/components/uploading-loader/uploading-loader.component.ts:12</a></div>
                             </td>
                         </tr>
 
@@ -190,9 +190,15 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="9" class="link-to-prism">src/app/components/uploading-loader/uploading-loader.component.ts:9</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/components/uploading-loader/uploading-loader.component.ts:12</a></div>
                             </td>
                         </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>El texto que acompaña al loader.</p>
+</div>
+                    </td>
+                </tr>
             </tbody>
         </table>
 </section>
@@ -226,8 +232,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="12"
-                            class="link-to-prism">src/app/components/uploading-loader/uploading-loader.component.ts:12</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="15"
+                            class="link-to-prism">src/app/components/uploading-loader/uploading-loader.component.ts:15</a></div>
                 </td>
             </tr>
 
@@ -257,6 +263,9 @@
   styleUrls: [&#x27;./uploading-loader.component.scss&#x27;]
 })
 export class UploadingLoaderComponent implements OnInit {
+  /**
+   * El texto que acompaña al loader.
+   */
   @Input() text;
   constructor() { }
 
